# sisyphus

./: .dockerignore  .env.dist  .flake8  .gitignore  CHECKS  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  client.py  compose.yaml  pyproject.toml  requirements.txt
scripts/: .gitignore  add_command.sh  addrules.py  addsearches.py  createsuperuser.sh  dateFetchedPastNDays.py  fetch_jobs.sh  generate_secret_key.py  recursive_chown.sh  rules.example.json  searches.example.json  startapp.sh
sisyphus/: asgi.py  celery.py  conftest.py  settings.py  urls.py  wsgi.py
sisyphus/accounts/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
sisyphus/accounts/migrations/: 0001_initial.py  0002_userprofile.py  0003_userprofile_default_resume.py  0004_remove_userprofile_default_resume.py  0005_userprofile_daily_application_goal.py
sisyphus/accounts/tests/: test_middleware.py  test_models.py  test_views.py
sisyphus/applications/: apps.py  models.py
sisyphus/applications/migrations/: 0001_initial.py
sisyphus/companies/: admin.py  apps.py  models.py  urls.py  views.py
sisyphus/companies/migrations/: 0001_initial.py  0002_companynote.py  0003_company_user_alter_company_linkedin_url_and_more.py  0004_backfill_company_user.py  0005_alter_company_user.py
sisyphus/companies/tests/: test_models.py  test_views.py
sisyphus/core/: admin.py  apps.py  fields.py  models.py  services.py  tasks.py  types.py  worker.py
sisyphus/core/tests/: test_fields.py
sisyphus/jobs/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py  webdriver.py
sisyphus/jobs/migrations/: 0001_initial.py  0002_alter_job_description_alter_job_raw_html_jobevent_and_more.py  0002_job_date_applied_job_status.py  0003_alter_job_status_alter_jobevent_new_status_and_more.py  0003_event.py  0004_job_pre_ban_status.py  0004_job_search.py  0005_alter_job_pre_ban_status_alter_job_status_and_more.py  0005_alter_job_status.py  0006_alter_job_status.py  0006_job_score_job_score_explanation.py  0007_job_score_task_id.py  0008_alter_job_flexibility_alter_job_pre_ban_status.py  0009_job_search_run.py  0010_job_user_alter_job_url_job_unique_job_url_per_user.py  0011_backfill_job_user.py  0012_alter_job_user.py  0013_create_locations.py  0014_job_source.py  0015_job_similar_jobs_parsed.py
sisyphus/jobs/tests/: test_models.py  test_tasks.py  test_views.py
sisyphus/metrics/: apps.py  views.py
sisyphus/metrics/tests/: test_views.py
sisyphus/resumes/: admin.py  apps.py  models.py
sisyphus/resumes/migrations/: 0001_initial.py  0002_resume_text.py  0003_alter_resume_options_alter_resume_user.py
sisyphus/rules/: admin.py  api_views.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
sisyphus/rules/migrations/: 0001_initial.py  0002_alter_rule_target_status.py  0002_remove_rule_field_type.py  0003_alter_rule_name.py  0003_alter_rulematch_rule.py  0004_alter_rulematch_options.py  0004_rule_populated.py  0005_alter_rule_options.py  0005_alter_rule_populated.py  0006_alter_rule_priority.py
sisyphus/rules/tests/: test_models.py  test_tasks.py  test_views.py
sisyphus/search/: admin.py  apps.py  models.py  webdriver.py
sisyphus/search/migrations/: 0001_initial.py
sisyphus/search/parsers/: base.py  linkedin.py
sisyphus/searches/: admin.py  api_views.py  apps.py  models.py  playwright.py  serializers.py  tasks.py  urls.py  utils.py  views.py
sisyphus/searches/migrations/: 0001_initial.py  0002_searchrun.py  0003_sources.py  0004_alter_search_status.py  0005_searchrun_period.py  0006_search_user.py  0007_backfill_search_user.py  0008_alter_search_user.py  0009_search_schedule.py  0010_add_hiringcafe_source.py
sisyphus/searches/parsers/: __init__.py  base.py  hiringcafe.py  (+1 more)
sisyphus/templates/: base.html  feed.html  index.html  login.html  metrics.html  profile.html  profile_resumes.html
sisyphus/ui/: apps.py  views.py
sisyphus/users/: admin.py  apps.py  models.py
sisyphus/web/: apps.py  urls.py  views.py
(+45 files in other folders)
