[project]
name = "sisyphus"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "django-environ>=0.12.0",
    "django-htmx>=1.21.0",
    "psycopg[binary]>=3.3.2",
    "pymupdf>=1.25.0",
    "celery[redis]>=5.4.0",
    "django-celery-beat @ git+https://github.com/celery/django-celery-beat@bd429063cbb227c00905e7693c38895e44ff8e47",
    "openai>=1.60.0",
]
