[project]
name = "sisyphus"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "django-environ>=0.12.0",
    "django-htmx>=1.21.0",
    "psycopg[binary]>=3.3.2",
    "pymupdf>=1.25.0",
    "celery[redis]>=5.4.0",
    "django-celery-beat @ git+https://github.com/celery/django-celery-beat@bd429063cbb227c00905e7693c38895e44ff8e47",
    "openai>=1.60.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.14.3",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "coverage[toml]",
    "django-stubs[compatible-mypy]",
    "pytest",
    "pytest-django",
    "ruff>=0.15.0",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "settings.py",
]
line-length = 119
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",   # any-type
    "COM812",   # missing-trailing-comma
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D106",     # Missing docstring in public nested class
    "D107",     # Missing docstring in `__init__`
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "EM101",    # raw-string-in-exception
    "FBT001",   # Boolean-typed positional argument
    "FBT002",   # Boolean default positional argument
    "PLR2004",  # magic-value-comparison
    "PYI018",   # unused-private-type-var
    "PYI047",   # unused-private-type-alias
    "TRY003",   # raise-vanilla-args
    "UP040",    # non-pep695-type-alias
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"*/admin.py" = [
    "D101",     # Missing docstring in public class
]
"*/apps.py" = [
    "D101",     # Missing docstring in public class
]
"*/management/commands/*" = [
    "ARG002",   # Unused method argument
    "D101",     # Missing docstring in public class
]
"*/tests/*" = [
    "S101",     # assert
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
plugins = ['mypy_django_plugin.main']
python_version = '3.14'
strict = true
exclude = ['migrations/']

[[tool.mypy.overrides]]
module = ['celery.*', 'environ', 'fitz', 'playwright.*']
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    'sisyphus.celery',
    'sisyphus.core.tasks',
    'sisyphus.jobs.tasks',
    'sisyphus.rules.tasks',
    'sisyphus.searches.tasks',
]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'sisyphus.settings'
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']

[tool.coverage.run]
source = ['sisyphus']
branch = true
omit = [
    '*/migrations/*',
    '*/tests/*',
    'sisyphus/settings.py',
    'sisyphus/celery.py',
    'sisyphus/wsgi.py',
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.django-stubs]
django_settings_module = 'sisyphus.settings'
